Website updates and changes. 28 April 2025 Fixed the tables not showing correctly in e-waste we buy/sell webpages. Removed "E-waste Table Query" table and the relevant codes in e-waste we buy/sell webpages. Updated FAQ webpage. Updated dashboard webpage. Updated e-waste we buy/sell webpage. Updated database query webpage.
To-do:
Add a function to display that the account is not registered in the database for login page.
Rework mailing list function.
Possibly dropdown menu for Admin button.
Remember the entries the user typed in the table query forms (Optional).
[Priority] Update Manage E-waste Requests Screening/Acceptance
[Priority] Update Account Registration
[Priority] Update Account Registration Process
[Priority] Update Account Login
[Priority] Update Account Login Process
[To-do] About us webpage.
[To-do] Contact us webpage.
[To-do] Dashboard webpage.
[To-do] Requests history webpage.
[To-do] Services webpage.
[To-do] Tracking webpage.
[To-do] Transactions history webpage.
[To-do] Manage profile webpage.
[To-do] Admin - Statistics webpage.
[Priority] Admin - E-waste requests screen/acceptance webpage.
[Priority] Manage users (Edit).
[Priority] Manage users (Delete confirmation).

--- a/css/buy-sell-request.css
+++ b/css/buy-sell-request.css
@@ -139,6 +139,50 @@ Student ID: Redacted
     box-shadow: 0px 0px 16px 0px black;
 }
 
+/* Type of request form table contents designs */
+.type-of-request-form-table-contents table {
+    border: 2px solid black;
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.type-of-request-form-table-contents th {
+    color: white;
+    background-color: rgb(70, 129, 70);
+    /* background-color: rgb(150, 255, 150); */
+}
+
+.type-of-request-form-table-contents td {
+    color: white;
+    background-color: rgb(100, 120, 100);
+    /* background-color: rgb(125, 150, 125); */
+    /* background-color: rgb(225, 255, 225); */
+}
+
+.type-of-request-form-table-contents tr {
+    height: 40px;
+}
+
+.type-of-request-form-table-contents th,
+.type-of-request-form-table-contents td {
+    border: 1px solid black;
+}
+
+.type-of-request-form-table-contents th {
+    width: 38%;
+    padding-left: 10px;
+    text-align: left;
+}
+
+.type-of-request-form-table-contents td {
+    width: 375px;
+    padding: 10px;
+}
+
 /* Buy table contents designs */
 .buy-table-contents table {
     border: 2px solid black;
@@ -157,7 +201,8 @@ Student ID: Redacted
 }
 
 .buy-table-contents td {
-    background-color: rgb(125, 150, 125);
+    background-color: rgb(100, 120, 100);
+    /* background-color: rgb(125, 150, 125); */
     /* background-color: rgb(225, 255, 225); */
 }
 
@@ -199,7 +244,8 @@ Student ID: Redacted
 }
 
 .sell-table-contents td {
-    background-color: rgb(125, 150, 125);
+    background-color: rgb(100, 120, 100);
+    /* background-color: rgb(125, 150, 125); */
     /* background-color: rgb(225, 255, 225); */
 }
 
@@ -241,7 +287,8 @@ Student ID: Redacted
 }
 
 .picture-table-contents td {
-    background-color: rgb(125, 150, 125);
+    background-color: rgb(100, 120, 100);
+    /* background-color: rgb(125, 150, 125); */
     /* background-color: rgb(225, 255, 225); */
 }
 
