--- a/css/faq.css
+++ b/css/faq.css
@@ -53,16 +53,13 @@ Student ID: Redacted
     margin-left: 5px;
     margin-right: 5px;
     border-width: 2px;
-    text-align: center;
+    text-align: left;
     /* background-color: lightyellow; */
     background: linear-gradient(rgb(50, 70, 70, 1), rgba(27, 47, 48, 0.7));
     color: white;
     box-shadow: 0px 0px 16px 0px black;
-}
-
-.container-1-paragraph {
-    font-size: 24px;
-    line-height: 50px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 /* 
